--- a/index.ipynb
+++ b/index.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1150,
+   "execution_count": 89,
    "id": "9257a32b",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1151,
+   "execution_count": 90,
    "id": "4d7616eb",
    "metadata": {},
    "outputs": [
@@ -223,12 +223,13 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 1151,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# data loading\n",
     "df = pd.read_csv('./data/student-mat.csv',delimiter=';')\n",
     "df.head()"
    ]
@@ -278,7 +279,7 @@
     "Fail to reject H₀, if p ≥ α\n",
     "\n",
     "\n",
-    "An alpha value can be any value set between 0 and 1. However, the most common alpha value in science is 0.05"
+    "An alpha value can be any value set between 0 and 1. However, the most common alpha value in data science is 0.05"
    ]
   },
   {
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1152,
+   "execution_count": 91,
    "id": "3555ad7a",
    "metadata": {},
    "outputs": [],
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1153,
+   "execution_count": 92,
    "id": "e3acfd8b",
    "metadata": {},
    "outputs": [
@@ -412,7 +413,7 @@
        "np.float64(10.415189873417722)"
       ]
      },
-     "execution_count": 1153,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,17 +426,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1154,
+   "execution_count": 93,
    "id": "2c5c6a9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(10.9)"
+       "np.float64(10.93)"
       ]
      },
-     "execution_count": 1154,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,24 +449,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1155,
+   "execution_count": 94,
    "id": "14217ad5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t_stat4.24, p_value0.0000\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.stats import ttest_1samp\n",
     "\n",
     "# t test to compare the sample mean to the population mean\n",
     "# Perform one-sample t-test\n",
-    "t_stat, p_value = ttest_1samp(sample,population_mean)\n",
+    "t_stat, p_value = ttest_1samp(sample,9,alternative=\"greater\")\n",
     "\n",
     "# For right-tailed test (sample mean > population mean)\n",
-    "p_val_right = p_value / 2 if t_stat > 0 else (1 - p_value) / 2\n"
+    "p_val_right = p_value / 2 if t_stat > 0 else (1 - p_value) / 2\n",
+    "\n",
+    "print(f\"t_stat{t_stat:.2f}, p_value{p_val_right:.4f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1156,
+   "execution_count": 95,
    "id": "5627f3bb",
    "metadata": {},
    "outputs": [
@@ -473,15 +484,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample mean = 10.9 ,population mean = 10.415189873417722\n",
-      "t_stat = 0.9961342128092128 , p_val_right = 0.16080673893258476\n",
-      "Fail to reject H₀ → The sample mean <= population mean\n"
+      "sample mean = 10.93 ,population mean = 10.415189873417722\n",
+      "t_stat = 4.2407625939634395 , p_val_right = 1.253516031253186e-05\n",
+      "Reject H₀ → The sample mean >  9\n"
      ]
     }
    ],
    "source": [
-    "h0 = \"The sample mean <= population mean\"\n",
-    "h1 = \"The sample mean > population mean\"\n",
+    "h0 = \"The sample mean <=  9\"\n",
+    "h1 = \"The sample mean >  9\"\n",
     "\n",
     "print(f\"sample mean = {sample.mean()} ,population mean = {population_mean}\",)\n",
     "print(f't_stat = {t_stat} , p_val_right = {p_val_right}')\n",
@@ -504,7 +515,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1157,
+   "execution_count": null,
+   "id": "c08ddab3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_stat, p_value = ttest_1samp(sample,population_mean,alternative=\"less\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "id": "6d843c27",
    "metadata": {},
    "outputs": [],
@@ -515,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1158,
+   "execution_count": 98,
    "id": "bdbe9ae3",
    "metadata": {},
    "outputs": [
@@ -523,8 +544,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample mean = 10.9 ,population mean = 10.415189873417722\n",
-      "t_stat = 0.9961342128092128 , p_val_left = 0.8391932610674152\n",
+      "sample mean = 10.93 ,population mean = 10.415189873417722\n",
+      "t_stat = 4.2407625939634395 , p_val_left = 0.9999874648396875\n",
       "Fail to reject H₀ → The sample mean >= population mean\n"
      ]
     }
@@ -535,7 +556,17 @@
     "\n",
     "print(f\"sample mean = {sample.mean()} ,population mean = {population_mean}\",)\n",
     "print(f't_stat = {t_stat} , p_val_left = {p_val_left}')\n",
-    "hypothesis_test(h0,h1,p_val_right)"
+    "hypothesis_test(h0,h1,p_val_left)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "d1ec7ed2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Examples"
    ]
   },
   {
@@ -563,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1159,
+   "execution_count": 100,
    "id": "76da42d6",
    "metadata": {},
    "outputs": [
@@ -571,8 +602,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T-statistic: 1.00\n",
-      "P-value: 0.3216\n"
+      "T-statistic: 1.13\n",
+      "P-value: 0.2607\n"
      ]
     }
    ],
@@ -580,7 +611,7 @@
     "from scipy.stats import ttest_ind\n",
     "\n",
     "# Perform two-tailed one-sample t-test\n",
-    "t_stat, p_value = ttest_1samp(sample, population_mean)\n",
+    "t_stat, p_value = ttest_1samp(sample, population_mean,)\n",
     "\n",
     "print(f\"T-statistic: {t_stat:.2f}\")\n",
     "print(f\"P-value: {p_value:.4f}\")"
@@ -588,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1160,
+   "execution_count": 101,
    "id": "c382a03d",
    "metadata": {},
    "outputs": [
@@ -596,8 +627,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample mean = 10.9 ,population mean = 10.415189873417722\n",
-      "t_stat = 0.9961342128092128 , p_val_left = 0.32161347786516953\n",
+      "sample mean = 10.93 ,population mean = 10.415189873417722\n",
+      "t_stat = 1.1311852475666877 , p_value = 0.26070991099532714\n",
       "Fail to reject H₀ → The sample mean = population mean\n"
      ]
     }
@@ -607,8 +638,8 @@
     "h0 = \"The sample mean = population mean\"\n",
     "\n",
     "print(f\"sample mean = {sample.mean()} ,population mean = {population_mean}\",)\n",
-    "print(f't_stat = {t_stat} , p_val_left = {p_value}')\n",
-    "hypothesis_test(h0,h1,p_val_right)"
+    "print(f't_stat = {t_stat} , p_value = {p_value}')\n",
+    "hypothesis_test(h0,h1,p_value)"
    ]
   },
   {
@@ -644,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1161,
+   "execution_count": 102,
    "id": "e701a2f0",
    "metadata": {},
    "outputs": [
@@ -654,7 +685,7 @@
        "(np.float64(9.966346153846153), np.float64(10.914438502673796))"
       ]
      },
-     "execution_count": 1161,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1162,
+   "execution_count": 103,
    "id": "5b182ff6",
    "metadata": {},
    "outputs": [
@@ -693,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1163,
+   "execution_count": 104,
    "id": "6821b862",
    "metadata": {},
    "outputs": [
@@ -750,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1164,
+   "execution_count": 105,
    "id": "aa707ea3",
    "metadata": {},
    "outputs": [
@@ -773,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1165,
+   "execution_count": 106,
    "id": "adcbd1ad",
    "metadata": {},
    "outputs": [
@@ -826,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1166,
+   "execution_count": 107,
    "id": "5a73b1d4",
    "metadata": {},
    "outputs": [],
@@ -844,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1167,
+   "execution_count": 108,
    "id": "e86196bf",
    "metadata": {},
    "outputs": [
@@ -867,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1168,
+   "execution_count": 109,
    "id": "9d3524d5",
    "metadata": {},
    "outputs": [
@@ -895,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1169,
+   "execution_count": 110,
    "id": "4e55bdef",
    "metadata": {},
    "outputs": [
@@ -951,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1170,
+   "execution_count": 111,
    "id": "310468f8",
    "metadata": {},
    "outputs": [
@@ -981,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1171,
+   "execution_count": 112,
    "id": "5a823204",
    "metadata": {},
    "outputs": [
@@ -1037,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1172,
+   "execution_count": 113,
    "id": "f9d1fbd6",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1173,
+   "execution_count": 114,
    "id": "bcd420f7",
    "metadata": {},
    "outputs": [
@@ -1085,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1174,
+   "execution_count": 115,
    "id": "edae2dd8",
    "metadata": {},
    "outputs": [
@@ -1138,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1175,
+   "execution_count": 116,
    "id": "e44e2c20",
    "metadata": {},
    "outputs": [
