--- a/index.ipynb
+++ b/index.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 410,
    "id": "9257a32b",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 411,
    "id": "4d7616eb",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 411,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 412,
    "id": "3555ad7a",
    "metadata": {},
    "outputs": [],
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 413,
    "id": "e3acfd8b",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
        "np.float64(10.415189873417722)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 413,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,30 +426,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 414,
    "id": "2c5c6a9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(10.93)"
+       "np.float64(10.576666666666666)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 414,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# sample 100 random rows\n",
-    "sample = df[\"G3\"].sample(n=100)    \n",
+    "sample = df[\"G3\"].sample(n=300)    \n",
     "sample.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 415,
    "id": "14217ad5",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t_stat4.24, p_value0.0000\n"
+      "t_stat0.61, p_value0.2702\n"
      ]
     }
    ],
@@ -466,17 +466,17 @@
     "\n",
     "# t test to compare the sample mean to the population mean\n",
     "# Perform one-sample t-test\n",
-    "t_stat, p_value = ttest_1samp(sample,9,alternative=\"greater\")\n",
+    "t_stat, p_value = ttest_1samp(sample,population_mean,alternative=\"greater\")\n",
     "\n",
     "# For right-tailed test (sample mean > population mean)\n",
-    "p_val_right = p_value / 2 if t_stat > 0 else (1 - p_value) / 2\n",
+    "# p_val_right = p_value / 2 if t_stat > 0 else (1 - p_value) / 2\n",
     "\n",
-    "print(f\"t_stat{t_stat:.2f}, p_value{p_val_right:.4f}\")\n"
+    "print(f\"t_stat{t_stat:.2f}, p_value{p_value:.4f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 416,
    "id": "5627f3bb",
    "metadata": {},
    "outputs": [
@@ -484,19 +484,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample mean = 10.93 ,population mean = 10.415189873417722\n",
-      "t_stat = 4.2407625939634395 , p_val_right = 1.253516031253186e-05\n",
-      "Reject H₀ → The sample mean >  9\n"
+      "sample mean = 10.576666666666666 ,population mean = 10.415189873417722\n",
+      "t_stat = 0.6129547351128964 , p_val_right = 0.27018610414713584\n",
+      "Fail to reject H₀ → The sample mean < pop mean\n"
      ]
     }
    ],
    "source": [
-    "h0 = \"The sample mean <=  9\"\n",
-    "h1 = \"The sample mean >  9\"\n",
+    "h0 = \"The sample mean < pop mean\"\n",
+    "h1 = \"The sample mean > pop mean\"\n",
     "\n",
     "print(f\"sample mean = {sample.mean()} ,population mean = {population_mean}\",)\n",
-    "print(f't_stat = {t_stat} , p_val_right = {p_val_right}')\n",
-    "hypothesis_test(h0,h1,p_val_right)"
+    "print(f't_stat = {t_stat} , p_val_right = {p_value}')\n",
+    "hypothesis_test(h0,h1,p_value)"
    ]
   },
   {
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 417,
    "id": "c08ddab3",
    "metadata": {},
    "outputs": [],
@@ -525,18 +525,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 418,
    "id": "6d843c27",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "p_val_left = p_value / 2 if t_stat < 0 else 1 - (p_value / 2)"
+    "# p_val_left = p_value / 2 if t_stat < 0 else 1 - (p_value / 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 419,
    "id": "bdbe9ae3",
    "metadata": {},
    "outputs": [
@@ -544,8 +544,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample mean = 10.93 ,population mean = 10.415189873417722\n",
-      "t_stat = 4.2407625939634395 , p_val_left = 0.9999874648396875\n",
+      "sample mean = 10.576666666666666 ,population mean = 10.415189873417722\n",
+      "t_stat = 0.6129547351128964 , p_val_left = 0.7298138958528642\n",
       "Fail to reject H₀ → The sample mean >= population mean\n"
      ]
     }
@@ -555,13 +555,13 @@
     "h0 = \"The sample mean >= population mean\"\n",
     "\n",
     "print(f\"sample mean = {sample.mean()} ,population mean = {population_mean}\",)\n",
-    "print(f't_stat = {t_stat} , p_val_left = {p_val_left}')\n",
-    "hypothesis_test(h0,h1,p_val_left)"
+    "print(f't_stat = {t_stat} , p_val_left = {p_value}')\n",
+    "hypothesis_test(h0,h1,p_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 420,
    "id": "d1ec7ed2",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 421,
    "id": "76da42d6",
    "metadata": {},
    "outputs": [
@@ -602,8 +602,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T-statistic: 1.13\n",
-      "P-value: 0.2607\n"
+      "T-statistic: 0.61\n",
+      "P-value: 0.5404\n"
      ]
     }
    ],
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 422,
    "id": "c382a03d",
    "metadata": {},
    "outputs": [
@@ -627,8 +627,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample mean = 10.93 ,population mean = 10.415189873417722\n",
-      "t_stat = 1.1311852475666877 , p_value = 0.26070991099532714\n",
+      "sample mean = 10.576666666666666 ,population mean = 10.415189873417722\n",
+      "t_stat = 0.6129547351128964 , p_value = 0.5403722082942717\n",
       "Fail to reject H₀ → The sample mean = population mean\n"
      ]
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 423,
    "id": "e701a2f0",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
        "(np.float64(9.966346153846153), np.float64(10.914438502673796))"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 423,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 424,
    "id": "5b182ff6",
    "metadata": {},
    "outputs": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 425,
    "id": "6821b862",
    "metadata": {},
    "outputs": [
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 426,
    "id": "aa707ea3",
    "metadata": {},
    "outputs": [
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 427,
    "id": "adcbd1ad",
    "metadata": {},
    "outputs": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 428,
    "id": "5a73b1d4",
    "metadata": {},
    "outputs": [],
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 429,
    "id": "e86196bf",
    "metadata": {},
    "outputs": [
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 430,
    "id": "9d3524d5",
    "metadata": {},
    "outputs": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 431,
    "id": "4e55bdef",
    "metadata": {},
    "outputs": [
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 432,
    "id": "310468f8",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 433,
    "id": "5a823204",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 434,
    "id": "f9d1fbd6",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 435,
    "id": "bcd420f7",
    "metadata": {},
    "outputs": [
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 436,
    "id": "edae2dd8",
    "metadata": {},
    "outputs": [
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 437,
    "id": "e44e2c20",
    "metadata": {},
    "outputs": [
