--- a/index.ipynb
+++ b/index.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 170,
    "id": "9257a32b",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 171,
    "id": "4d7616eb",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 411,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 172,
    "id": "3555ad7a",
    "metadata": {},
    "outputs": [],
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 173,
    "id": "e3acfd8b",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
        "np.float64(10.415189873417722)"
       ]
      },
-     "execution_count": 413,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,30 +426,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 174,
    "id": "2c5c6a9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(10.576666666666666)"
+       "np.float64(10.66)"
       ]
      },
-     "execution_count": 414,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# sample 100 random rows\n",
-    "sample = df[\"G3\"].sample(n=300)    \n",
+    "sample = df[\"G3\"].sample(n=100)    \n",
     "sample.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 175,
    "id": "14217ad5",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t_stat0.61, p_value0.2702\n"
+      "t_stat0.56, p_value0.2880\n"
      ]
     }
    ],
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 176,
    "id": "5627f3bb",
    "metadata": {},
    "outputs": [
@@ -484,16 +484,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample mean = 10.576666666666666 ,population mean = 10.415189873417722\n",
-      "t_stat = 0.6129547351128964 , p_val_right = 0.27018610414713584\n",
-      "Fail to reject H₀ → The sample mean < pop mean\n"
+      "sample mean = 10.66 ,population mean = 10.415189873417722\n",
+      "t_stat = 0.5611200905937132 , p_val_right = 0.2879917844064125\n",
+      "Fail to reject H₀ → The sample mean <= pop mean\n"
      ]
     }
    ],
    "source": [
-    "h0 = \"The sample mean < pop mean\"\n",
+    "h0 = \"The sample mean <= pop mean\"\n",
     "h1 = \"The sample mean > pop mean\"\n",
-    "\n",
+    " \n",
     "print(f\"sample mean = {sample.mean()} ,population mean = {population_mean}\",)\n",
     "print(f't_stat = {t_stat} , p_val_right = {p_value}')\n",
     "hypothesis_test(h0,h1,p_value)"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 177,
    "id": "c08ddab3",
    "metadata": {},
    "outputs": [],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 178,
    "id": "6d843c27",
    "metadata": {},
    "outputs": [],
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 179,
    "id": "bdbe9ae3",
    "metadata": {},
    "outputs": [
@@ -544,8 +544,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample mean = 10.576666666666666 ,population mean = 10.415189873417722\n",
-      "t_stat = 0.6129547351128964 , p_val_left = 0.7298138958528642\n",
+      "sample mean = 10.66 ,population mean = 10.415189873417722\n",
+      "t_stat = 0.5611200905937132 , p_val_left = 0.7120082155935875\n",
       "Fail to reject H₀ → The sample mean >= population mean\n"
      ]
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 180,
    "id": "d1ec7ed2",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 181,
    "id": "76da42d6",
    "metadata": {},
    "outputs": [
@@ -602,14 +602,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T-statistic: 0.61\n",
-      "P-value: 0.5404\n"
+      "T-statistic: 0.56\n",
+      "P-value: 0.5760\n"
      ]
     }
    ],
    "source": [
-    "from scipy.stats import ttest_ind\n",
-    "\n",
     "# Perform two-tailed one-sample t-test\n",
     "t_stat, p_value = ttest_1samp(sample, population_mean,)\n",
     "\n",
@@ -619,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 182,
    "id": "c382a03d",
    "metadata": {},
    "outputs": [
@@ -627,8 +625,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample mean = 10.576666666666666 ,population mean = 10.415189873417722\n",
-      "t_stat = 0.6129547351128964 , p_value = 0.5403722082942717\n",
+      "sample mean = 10.66 ,population mean = 10.415189873417722\n",
+      "t_stat = 0.5611200905937132 , p_value = 0.575983568812825\n",
       "Fail to reject H₀ → The sample mean = population mean\n"
      ]
     }
@@ -675,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 183,
    "id": "e701a2f0",
    "metadata": {},
    "outputs": [
@@ -685,7 +683,7 @@
        "(np.float64(9.966346153846153), np.float64(10.914438502673796))"
       ]
      },
-     "execution_count": 423,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": null,
    "id": "5b182ff6",
    "metadata": {},
    "outputs": [
@@ -724,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 185,
    "id": "6821b862",
    "metadata": {},
    "outputs": [
@@ -745,6 +743,26 @@
     "print(f\"Male scores = {male_scores.mean()} ,Female Scores = {female_scores.mean()}\",)\n",
     "print(f't_stat = {t_stat} , p_val_left = {p_value}')\n",
     "hypothesis_test(h0,h1,p_value)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffdf8f49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Right tailed test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b641b82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# left tailed test "
    ]
   },
   {
@@ -781,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 186,
    "id": "aa707ea3",
    "metadata": {},
    "outputs": [
@@ -804,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 187,
    "id": "adcbd1ad",
    "metadata": {},
    "outputs": [
@@ -857,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 188,
    "id": "5a73b1d4",
    "metadata": {},
    "outputs": [],
@@ -875,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 189,
    "id": "e86196bf",
    "metadata": {},
    "outputs": [
@@ -898,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 190,
    "id": "9d3524d5",
    "metadata": {},
    "outputs": [
@@ -926,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 191,
    "id": "4e55bdef",
    "metadata": {},
    "outputs": [
@@ -982,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 192,
    "id": "310468f8",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 193,
    "id": "5a823204",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 194,
    "id": "f9d1fbd6",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 195,
    "id": "bcd420f7",
    "metadata": {},
    "outputs": [
@@ -1116,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 196,
    "id": "edae2dd8",
    "metadata": {},
    "outputs": [
@@ -1169,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 197,
    "id": "e44e2c20",
    "metadata": {},
    "outputs": [
