added quizzes and cheat sheet

--- a/index.ipynb
+++ b/index.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 2,
    "id": "9257a32b",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 3,
    "id": "4d7616eb",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 4,
    "id": "3555ad7a",
    "metadata": {},
    "outputs": [],
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 5,
    "id": "e3acfd8b",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
        "np.float64(10.415189873417722)"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,17 +426,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 6,
    "id": "2c5c6a9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(10.66)"
+       "np.float64(10.72)"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 7,
    "id": "14217ad5",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t_stat0.56, p_value0.2880\n"
+      "t_stat0.64, p_value0.2619\n"
      ]
     }
    ],
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 8,
    "id": "5627f3bb",
    "metadata": {},
    "outputs": [
@@ -484,8 +484,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample mean = 10.66 ,population mean = 10.415189873417722\n",
-      "t_stat = 0.5611200905937132 , p_val_right = 0.2879917844064125\n",
+      "sample mean = 10.72 ,population mean = 10.415189873417722\n",
+      "t_stat = 0.6396367093784506 , p_val_right = 0.26194311389997826\n",
       "Fail to reject H₀ → The sample mean <= pop mean\n"
      ]
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 9,
    "id": "c08ddab3",
    "metadata": {},
    "outputs": [],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 10,
    "id": "6d843c27",
    "metadata": {},
    "outputs": [],
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 11,
    "id": "bdbe9ae3",
    "metadata": {},
    "outputs": [
@@ -544,8 +544,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample mean = 10.66 ,population mean = 10.415189873417722\n",
-      "t_stat = 0.5611200905937132 , p_val_left = 0.7120082155935875\n",
+      "sample mean = 10.72 ,population mean = 10.415189873417722\n",
+      "t_stat = 0.6396367093784506 , p_val_left = 0.7380568861000217\n",
       "Fail to reject H₀ → The sample mean >= population mean\n"
      ]
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 12,
    "id": "d1ec7ed2",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 13,
    "id": "76da42d6",
    "metadata": {},
    "outputs": [
@@ -602,8 +602,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T-statistic: 0.56\n",
-      "P-value: 0.5760\n"
+      "T-statistic: 0.64\n",
+      "P-value: 0.5239\n"
      ]
     }
    ],
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 14,
    "id": "c382a03d",
    "metadata": {},
    "outputs": [
@@ -625,8 +625,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample mean = 10.66 ,population mean = 10.415189873417722\n",
-      "t_stat = 0.5611200905937132 , p_value = 0.575983568812825\n",
+      "sample mean = 10.72 ,population mean = 10.415189873417722\n",
+      "t_stat = 0.6396367093784506 , p_value = 0.5238862277999565\n",
       "Fail to reject H₀ → The sample mean = population mean\n"
      ]
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 15,
    "id": "e701a2f0",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
        "(np.float64(9.966346153846153), np.float64(10.914438502673796))"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "5b182ff6",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 17,
    "id": "6821b862",
    "metadata": {},
    "outputs": [
@@ -750,19 +750,58 @@
    "execution_count": null,
    "id": "ffdf8f49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Male scores = 10.914438502673796 ,Female Scores = 9.966346153846153\n",
+      "t_stat = 2.061992815503971 , p_val_left = 0.019932666170763818\n",
+      "Reject H₀ → male_scores > female score in g3\n"
+     ]
+    }
+   ],
    "source": [
-    "# Right tailed test"
+    "# do male student perfom any better than female students in G3\n",
+    "# Right tailed test\n",
+    "h1 = \"male_scores > female score in g3\"\n",
+    "h0 = \"male_scores <= female score in g3\"\n",
+    "\n",
+    "t_stat,p_value = ttest_ind(male_scores,female_scores,alternative=\"greater\")\n",
+    "\n",
+    "print(f\"Male scores = {male_scores.mean()} ,Female Scores = {female_scores.mean()}\",)\n",
+    "print(f't_stat = {t_stat} , p_val_left = {p_value}')\n",
+    "hypothesis_test(h0,h1,p_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "7b641b82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Male scores = 10.914438502673796 ,Female Scores = 9.966346153846153\n",
+      "t_stat = 2.061992815503971 , p_val_left = 0.9800673338292362\n",
+      "Fail to reject H₀ → male_scores >= female score in g3\n"
+     ]
+    }
+   ],
    "source": [
-    "# left tailed test "
+    "# left tailed test\n",
+    "# do male student perfom worse than female students in G3\n",
+    "\n",
+    "h1 = \"male_scores < female score in g3\"\n",
+    "h0 = \"male_scores >= female score in g3\"\n",
+    "\n",
+    "t_stat,p_value = ttest_ind(male_scores,female_scores,alternative=\"less\")\n",
+    "\n",
+    "print(f\"Male scores = {male_scores.mean()} ,Female Scores = {female_scores.mean()}\",)\n",
+    "print(f't_stat = {t_stat} , p_val_left = {p_value}')\n",
+    "hypothesis_test(h0,h1,p_value) "
    ]
   },
   {
@@ -799,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 34,
    "id": "aa707ea3",
    "metadata": {},
    "outputs": [
@@ -822,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 21,
    "id": "adcbd1ad",
    "metadata": {},
    "outputs": [
@@ -845,6 +884,26 @@
     "print(f\"G3 scores Mean = {df[\"G3\"].mean()} , G1  Scores Mean = {df[\"G1\"].mean()}\")\n",
     "print(f\"T-statistic = {t_stat}, P-value = {p_value}\")\n",
     "hypothesis_test(h0, h1, p_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31f97f92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# right tailed test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e471bbf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# left tailed test "
    ]
   },
   {
@@ -875,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 22,
    "id": "5a73b1d4",
    "metadata": {},
    "outputs": [],
@@ -893,7 +952,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 35,
+   "id": "49a14f90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Medu\n",
+       "0                                         [24, 43, 46]\n",
+       "1    [16, 25, 28, 29, 27, 19, 29, 27, 24, 46, 8, 38...\n",
+       "2    [35, 34, 46, 38, 27, 23, 35, 21, 40, 28, 27, 2...\n",
+       "3    [26, 53, 44, 28, 16, 33, 30, 41, 35, 34, 36, 2...\n",
+       "4    [17, 44, 45, 17, 27, 42, 31, 42, 41, 28, 42, 4...\n",
+       "Name: total_grade, dtype: object"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "e86196bf",
    "metadata": {},
    "outputs": [
@@ -916,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 24,
    "id": "9d3524d5",
    "metadata": {},
    "outputs": [
@@ -944,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 25,
    "id": "4e55bdef",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 26,
    "id": "310468f8",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 27,
    "id": "5a823204",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 28,
    "id": "f9d1fbd6",
    "metadata": {},
    "outputs": [
@@ -1114,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 29,
    "id": "bcd420f7",
    "metadata": {},
    "outputs": [
@@ -1134,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 30,
    "id": "edae2dd8",
    "metadata": {},
    "outputs": [
@@ -1187,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 31,
    "id": "e44e2c20",
    "metadata": {},
    "outputs": [
